fixed text spacing in map card

--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,6 @@ a {
   text-decoration: none;
 }
 
-hr {
-  width: 307;
-  height: 3;
-}
-
 h1 {
   font-family: warnock-pro, Palatino, "Palatino Linotype", "Palatino LT STD",
     "Book Antiqua", Georgia, serif;
@@ -25,13 +20,15 @@ h2 {
   display: flex;
   font-size: 19px;
   font-weight: 200;
+  margin-bottom: 5px;
+  margin-top: 5px;
 }
 
 h3 {
   font-family: warnock-pro, Palatino, "Palatino Linotype", "Palatino LT STD",
     "Book Antiqua", Georgia, serif;
-  font-size: 18px;
-  font-weight: 500;
+  font-size: 15px;
+  font-weight: 200;
   font-family: warnock-pro, Palatino, "Palatino Linotype", "Palatino LT STD",
     "Book Antiqua", Georgia, serif;
   line-height: 1.16667em;
@@ -161,6 +158,10 @@ h3 {
   flex-direction: column;
 }
 
+.authorname {
+  margin-top: 4px;
+}
+
 .newspreview1 {
   display: flex;
   box-sizing: border-box;
@@ -198,6 +199,7 @@ hr {
   border: none;
   margin-right: 20px;
   margin-top: 20px;
+  margin-bottom: 2px;
 }
 .otherpreviews {
   display: flex;
